--- a/app/src/main/res/layout/countrys_layout.xml
+++ b/app/src/main/res/layout/countrys_layout.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/country"
+        android:id="@+id/countryName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
