complete project done

--- a/app/src/main/res/layout/continent_layout.xml
+++ b/app/src/main/res/layout/continent_layout.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:padding="0dp">
 
 
     <TextView
         android:id="@+id/continent"
+        android:padding="?listPreferredItemPaddingLeft"
         android:layout_width="match_parent"
-        android:layout_height="30dp" />
+        android:layout_height="wrap_content" />
 
-</LinearLayout>
+</FrameLayout>
