--- a/app/src/main/res/layout/continent_layout.xml
+++ b/app/src/main/res/layout/continent_layout.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardUseCompatPadding="true"
     android:padding="0dp">
 
 
+    <ImageView
+        android:id="@+id/arrow"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_arrow_drop_down_black_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/continent"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:padding="?listPreferredItemPaddingLeft"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-</FrameLayout>
+</androidx.cardview.widget.CardView>
