--- a/app/src/main/res/layout/countrys_layout.xml
+++ b/app/src/main/res/layout/countrys_layout.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="0dp">
 
     <TextView
         android:id="@+id/countryName"
+        android:padding="?listPreferredItemPaddingLeft"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-</FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:background="@android:color/black"
+        android:layout_height="1dp"/>
+
+</androidx.cardview.widget.CardView>
