--- a/app/src/main/res/layout/countrys_layout.xml
+++ b/app/src/main/res/layout/countrys_layout.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="0dp">
 
     <TextView
         android:id="@+id/countryName"
-        android:padding="?listPreferredItemPaddingLeft"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        tools:text="Niger" />
 
     <View
         android:layout_width="match_parent"
-        android:background="@android:color/black"
-        android:layout_height="1dp"/>
+        android:layout_height="1dp"
+        android:background="@android:color/black" />
 
 </androidx.cardview.widget.CardView>
