--- a/app/src/main/res/layout/countrys_layout.xml
+++ b/app/src/main/res/layout/countrys_layout.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:padding="0dp">
 
     <TextView
